[bumpversion]
current_version = 1.1.1.18
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+).(?P<revision>\d+)
serialize = {major}.{minor}.{patch}.{revision}
commit = True
tag = True

[bumpversion:file:stix/version.py]

[bumpversion:file:docs/index.rst]

[metadata]
license_file = LICENSE.txt

[bdist_wheel]
universal = True

